# s2doc

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  cb-domain-stories.yaml  claude.md  data-eng-hierarchy.md  data-eng-yaml-to-md-prompt.md  domain-stories-context.md  ds-visual-prompt-research.md  pyproject.toml  pytest.ini  setup.py  setup_tools.md
.claude/commands/: convert-domain-stories.md
examples/: payments-strategic.yaml  payments-tactical.yaml
examples/cb-domain-stories.md/: cb-domain-stories.md
examples/data-eng-output.md/: data-eng.md
examples/payments-strategic.md/: payments-strategic.md
examples/payments-tactical.md/: bc_payment_scheduling.md
s2doc/: __init__.py  __version__.py  cli.py  detector.py
s2doc/converters/: __init__.py
s2doc/converters/data_eng/: __init__.py  converter.py  diagram_generator.py
s2doc/converters/domain_stories/: __init__.py  cli.py  comment_extractor.py  converter.py  diagram_renderer.py  docx_converter.py  sequence_diagram.py
s2doc/converters/strategic/: __init__.py  cli.py  converter.py  models.py
s2doc/converters/tactical/: __init__.py  cli.py  converter.py  diagram_generator.py  models.py
s2doc/utils/: __init__.py
schemas/: domain-stories-schema.yaml  strategic-ddd.schema.yaml  tactical-ddd.schema.yaml
scripts/: convert_domain_stories.sh  convert_to_markdown.py
tests/: __init__.py  conftest.py  test_cli.py  test_converters.py  test_data_eng_converter.py  test_detector.py
